--- a/index.html
+++ b/index.html
@@ -351,32 +351,35 @@ canvas{width:100%!important;height:300px!important}
       <!-- Running Totals -->
       <div id="dsTotals" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:12px;margin-bottom:20px"></div>
 
-      <!-- New Entries -->
+      <!-- BUY Events -->
       <div style="margin-bottom:20px">
-        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">🟢 Positions Entered Today <span id="dsEntryCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
+        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">🟢 Buys <span id="dsBuyCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
         <div class="table-wrap">
-          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Entry Price</th><th>Bet Size</th></tr></thead>
-          <tbody id="dsEntriesBody"></tbody></table>
+          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Price</th><th>Amount</th></tr></thead>
+          <tbody id="dsBuysBody"></tbody></table>
         </div>
       </div>
 
-      <!-- Closures -->
+      <!-- SELL Events -->
       <div style="margin-bottom:20px">
-        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">🔴 Positions Closed Today <span id="dsCloseCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
+        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">🟠 Sells <span id="dsSellCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
         <div class="table-wrap">
-          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Exit</th><th>Outcome</th><th>P&L</th></tr></thead>
-          <tbody id="dsClosuresBody"></tbody></table>
+          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Price</th><th>Amount</th></tr></thead>
+          <tbody id="dsSellsBody"></tbody></table>
         </div>
       </div>
 
-      <!-- Open Positions -->
+      <!-- REDEEM Events -->
       <div style="margin-bottom:20px">
-        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">📋 Currently Open <span id="dsOpenCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
+        <div style="font-size:0.95rem;font-weight:700;margin-bottom:8px">💰 Redemptions <span id="dsRedeemCount" style="font-size:0.75rem;color:var(--text-muted);font-weight:500"></span></div>
         <div class="table-wrap">
-          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Entry Date</th><th>Bet Size</th></tr></thead>
-          <tbody id="dsOpenBody"></tbody></table>
+          <table><thead><tr><th>Trader</th><th>Market</th><th>Side</th><th>Amount</th></tr></thead>
+          <tbody id="dsRedeemsBody"></tbody></table>
         </div>
       </div>
+
+      <!-- Day Summary -->
+      <div id="dsDaySummary" style="margin-bottom:20px"></div>
     </div>
   </div>
 
@@ -84999,7 +85002,22 @@ const DAY_STEPPER_DATA = [{"trader":"0x000d257d","market":"Government shutdown o
     return portfolioValue * pct;
   }
 
-  function renderDay() {
+  const journalCache = {};
+
+  async function fetchDayEvents(dateStr) {
+    if (journalCache[dateStr]) return journalCache[dateStr];
+    try {
+      const resp = await fetch(`/api/journal?date=${dateStr}`);
+      const data = await resp.json();
+      journalCache[dateStr] = data.events || [];
+      return journalCache[dateStr];
+    } catch(e) {
+      console.error('Failed to fetch journal data:', e);
+      return [];
+    }
+  }
+
+  async function renderDay() {
     if (!days || !days.length) return;
     const dayStr = days[currentIdx];
     $('dsCurrentDate').textContent = dayStr;
@@ -85007,118 +85025,51 @@ const DAY_STEPPER_DATA = [{"trader":"0x000d257d","market":"Government shutdown o
     $('dsPrev').disabled = currentIdx === 0;
     $('dsNext').disabled = currentIdx === days.length - 1;
 
-    // Recalculate state from scratch up to currentIdx
-    let port = getStartingCapital();
-    let cash = port;
-    let open = [];
-    let cumPnl = 0;
-    let dayPnl = 0;
-    let todayEntries = [];
-    let todayClosures = [];
+    // Fetch today's events from API
+    const events = await fetchDayEvents(dayStr);
+    const buys = events.filter(e => e.t === 'B');
+    const sells = events.filter(e => e.t === 'S');
+    const redeems = events.filter(e => e.t === 'R');
 
-    for (let di = 0; di <= currentIdx; di++) {
-      const d = days[di];
-      const dayStart = parseDateToTs(d);
-      const dayEnd = dayStart + 86400;
-      let thisDayPnl = 0;
-      let thisDayEntries = [];
-      let thisDayClosures = [];
+    const buyVol = buys.reduce((s, e) => s + e.sz, 0);
+    const sellVol = sells.reduce((s, e) => s + e.sz, 0);
+    const redeemVol = redeems.reduce((s, e) => s + e.sz, 0);
 
-      // Entries: trades whose entryDate falls on this day
-      const entries = data.filter(t => {
-        const ed = dateStr(t.entryDate);
-        return ed === d;
-      });
-
-      for (const t of entries) {
-        const portValue = cash + open.reduce((s, o) => s + o.betSize, 0);
-        const betSize = computeBetSize(portValue);
-        if (betSize > cash) continue; // skip if not enough cash
-        cash -= betSize;
-        const pos = { ...t, betSize, entryDateStr: d };
-        open.push(pos);
-        thisDayEntries.push(pos);
-      }
-
-      // Closures: trades whose exitDate falls on this day
-      const closures = data.filter(t => {
-        const ed = dateStr(t.exitDate);
-        return ed === d;
-      });
-
-      for (const t of closures) {
-        const idx = open.findIndex(o => o.trader === t.trader && o.market === t.market && o.entryDate === t.entryDate);
-        if (idx === -1) continue;
-        const pos = open[idx];
-        open.splice(idx, 1);
-
-        // Calculate return based on entry/exit prices
-        let returnMult;
-        if (t.outcome === 'Profit') {
-          returnMult = (t.exitPrice - t.entryPrice) / t.entryPrice;
-        } else {
-          returnMult = (t.exitPrice - t.entryPrice) / t.entryPrice;
-        }
-        const profit = pos.betSize * returnMult;
-        cash += pos.betSize + profit;
-        thisDayPnl += profit;
-        thisDayClosures.push({ ...t, betSize: pos.betSize, profit });
-      }
-
-      cumPnl += thisDayPnl;
-      if (di === currentIdx) {
-        dayPnl = thisDayPnl;
-        todayEntries = thisDayEntries;
-        todayClosures = thisDayClosures;
-      }
-    }
-
-    const locked = open.reduce((s, o) => s + o.betSize, 0);
-    const eodValue = cash + locked;
-    const worstCase = cash;
-
-    // Render totals
+    // Summary cards
     const cards = [
-      { label: 'Start of Day', value: fmtUsd(eodValue - dayPnl), color: '' },
-      { label: 'Cash Available', value: fmtUsd(cash), color: '' },
-      { label: 'Locked in Trades', value: fmtUsd(locked), color: 'var(--accent)' },
-      { label: '# Open Positions', value: String(open.length), color: 'var(--accent)' },
-      { label: "Day's P&L", value: (dayPnl >= 0 ? '+' : '') + fmtUsd(dayPnl), color: dayPnl >= 0 ? 'var(--green,#00c853)' : 'var(--red,#ff1744)' },
-      { label: 'Cumulative P&L', value: (cumPnl >= 0 ? '+' : '') + fmtUsd(cumPnl), color: cumPnl >= 0 ? 'var(--green,#00c853)' : 'var(--red,#ff1744)' },
-      { label: 'EOD Portfolio', value: fmtUsd(eodValue), color: 'var(--accent)' },
-      { label: 'Worst Case', value: fmtUsd(worstCase), color: 'var(--red,#ff1744)' },
+      { label: 'Total Events', value: String(events.length), color: 'var(--accent)' },
+      { label: '🟢 Buys', value: `${buys.length}`, sub: fmtUsd(buyVol), color: '#00c853' },
+      { label: '🟠 Sells', value: `${sells.length}`, sub: fmtUsd(sellVol), color: '#ff9800' },
+      { label: '💰 Redeems', value: `${redeems.length}`, sub: fmtUsd(redeemVol), color: '#4caf50' },
+      { label: 'Buy Volume', value: fmtUsd(buyVol), color: '' },
+      { label: 'Net Flow', value: (redeemVol + sellVol - buyVol >= 0 ? '+' : '') + fmtUsd(redeemVol + sellVol - buyVol), color: (redeemVol + sellVol - buyVol) >= 0 ? '#00c853' : '#ff1744' },
     ];
 
     $('dsTotals').innerHTML = cards.map(c => `
       <div style="background:var(--bg-card);border:1px solid var(--border);border-radius:var(--radius);padding:14px 16px">
         <div style="font-size:0.7rem;color:var(--text-muted);margin-bottom:4px">${c.label}</div>
         <div style="font-size:1rem;font-weight:700;font-family:'JetBrains Mono',monospace;color:${c.color || 'var(--text-primary)'}">${c.value}</div>
+        ${c.sub ? `<div style="font-size:0.7rem;color:var(--text-muted);margin-top:2px">${c.sub}</div>` : ''}
       </div>
     `).join('');
 
-    // Entries table
-    $('dsEntryCount').textContent = `(${todayEntries.length})`;
-    $('dsEntriesBody').innerHTML = todayEntries.length ? todayEntries.map(t => `
-      <tr><td>${t.trader}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${t.market}</td><td>${t.side}</td><td>${t.entryPrice.toFixed(3)}</td><td>${fmtUsd(t.betSize)}</td></tr>
-    `).join('') : '<tr><td colspan="5" style="color:var(--text-muted);text-align:center;padding:12px">No new entries</td></tr>';
+    // Buys table
+    $('dsBuyCount').textContent = `(${buys.length} — $${fmt(buyVol)})`;
+    $('dsBuysBody').innerHTML = buys.length ? buys.map(e => `
+      <tr><td>${e.tr}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${e.m}</td><td>${e.s}</td><td class="mono">${e.p.toFixed(3)}</td><td class="mono">$${fmt(e.sz)}</td></tr>
+    `).join('') : '<tr><td colspan="5" style="color:var(--text-muted);text-align:center;padding:12px">No buys</td></tr>';
 
-    // Closures table
-    $('dsCloseCount').textContent = `(${todayClosures.length})`;
-    $('dsClosuresBody').innerHTML = todayClosures.length ? todayClosures.map(t => {
-      const outcomeColor = t.outcome === 'Profit' ? 'var(--green,#00c853)' : 'var(--red,#ff1744)';
-      const outcomeLabel = t.outcome === 'Profit' ? 'WIN' : 'LOSS';
-      const exitBadge = t.exitType === 'SELL' ? '<span style="color:#ff9800;font-size:0.7rem;font-weight:600">SELL</span>' : '<span style="color:#4caf50;font-size:0.7rem;font-weight:600">REDEEM</span>';
-      return `<tr><td>${t.trader}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${t.market}</td><td>${t.side}</td><td>${exitBadge}</td><td style="color:${outcomeColor};font-weight:600">${outcomeLabel}</td><td>${fmtPnl(t.profit)}</td></tr>`;
-    }).join('') : '<tr><td colspan="6" style="color:var(--text-muted);text-align:center;padding:12px">No closures</td></tr>';
+    // Sells table
+    $('dsSellCount').textContent = `(${sells.length} — $${fmt(sellVol)})`;
+    $('dsSellsBody').innerHTML = sells.length ? sells.map(e => `
+      <tr><td>${e.tr}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${e.m}</td><td>${e.s}</td><td class="mono">${e.p.toFixed(3)}</td><td class="mono">$${fmt(e.sz)}</td></tr>
+    `).join('') : '<tr><td colspan="5" style="color:var(--text-muted);text-align:center;padding:12px">No sells</td></tr>';
 
-    // Open positions
-    $('dsOpenCount').textContent = `(${open.length})`;
-    $('dsOpenBody').innerHTML = open.length ? open.map(t => `
-      <tr><td>${t.trader}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${t.market}</td><td>${t.side}</td><td>${t.entryDateStr}</td><td>${fmtUsd(t.betSize)}</td></tr>
-    `).join('') : '<tr><td colspan="5" style="color:var(--text-muted);text-align:center;padding:12px">No open positions</td></tr>';
-
-    openPositions = open;
-    cumulativePnl = cumPnl;
+    // Redeems table
+    $('dsRedeemCount').textContent = `(${redeems.length} — $${fmt(redeemVol)})`;
+    $('dsRedeemsBody').innerHTML = redeems.length ? redeems.map(e => `
+      <tr><td>${e.tr}</td><td style="max-width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${e.m}</td><td>${e.s || '—'}</td><td class="mono">$${fmt(e.sz)}</td></tr>
+    `).join('') : '<tr><td colspan="4" style="color:var(--text-muted);text-align:center;padding:12px">No redemptions</td></tr>';
   }
 
   // Event listeners
